[package]
name = "utools"
version = "0.1.1"
authors = ["yinhao <tfzxyinhao@qq.com>"]
edition = "2018"
license = "MIT"
description = "backend develop common functions"
homepage = "https://github.com/tfzxyinhao/utools.git"
documentation = "https://github.com/tfzxyinhao/utools.git"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
rand = "0.6.5"
lazy_static = "1.4.0"